# NextUp

./: .editorconfig  .env.example  .gitignore  AI_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Info.plist  LICENSE  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
MCP/: mcp-server.mjs
Sources/NextUp/: DiscoveryService.swift  EpisodeSeeds.swift  LibraryStore.swift  Models.swift  NextUpApp.swift  SeedFactory.swift  Views.swift  WatchmodeService.swift
Tests/: mcp-smoke.mjs
Tests/NextUpTests/: LibraryStoreTests.swift  WatchmodeLiveTests.swift
desktop/: GETTING-STARTED.md  INSTALL-FOR-FRIENDS.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  library.test.ts  library.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  PRIVACY.md  RATINGS.md  RELEASING.md  WINDOWS_TESTING.md
scripts/: build.sh  install.sh  render_icon.swift  scan-secrets.sh
