[package]
name = "next-up-desktop"
version = "0.2.0"
description = "A private, shared movie and TV watch tracker"
authors = ["Next Up contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "next_up_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
keyring = "4.1.4"
dirs = "6"
